# cmux

./: CLAUDE.md  README.md  ghostty.h
AppIcon-Debug.icon/: icon.json
CLI/: cmux.swift
GhosttyTabs.xcodeproj/: project.pbxproj
PaneKit/: Package.swift
Resources/: Localizable.xcstrings  RightSidebarExtensionPoints.xcappextensionpoints  opencode-plugin.js
RightSidebarDemoExtension/: RightSidebarDemoExtension.swift
Sources/: AppDelegate.swift  AppIconDockTilePlugin.swift  AppleScriptSupport.swift  BrowserWindowPortal.swift  CmuxConfig.swift  ContentView.swift  CustomCommandStore.swift  FileExplorerStore.swift  FileExplorerView.swift  GhosttyConfig.swift  GhosttyTerminalView.swift  GhosttyViewportSync.swift  KeybindingsConfigFile.swift  KeyboardShortcutSettings.swift  KeyboardShortcutSettingsFileStore.swift  MainWindowFocusController.swift  NiriCanvasView.swift  NotificationsPage.swift  RestorableAgentSession.swift  RightSidebarExtensionDemo.swift  RightSidebarPanelView.swift  SerialConsole.swift  SessionIndexStore.swift  SessionIndexView.swift  SessionPersistence.swift  ShortcutHintPill.swift  TabManager.swift  TerminalController.swift  TerminalImageTransfer.swift  TerminalNotificationStore.swift  TerminalSSHSessionDetector.swift  Workspace.swift  (+7 more)
daemon/remote/rust/: .gitignore  Cargo.toml  build.rs
daemon/remote/rust/ghostty-shim/: build.zig  build.zig.zon
daemon/remote/rust/ghostty-shim/src/: root.zig
daemon/remote/rust/src/: auth.rs  capture.rs  client.rs  ghostty.rs  main.rs  metadata.rs  pane.rs  proxy.rs  rpc.rs  server.rs  session.rs  tmux.rs
(+199 files in other folders)
