[package]
name = "cmuxd-remote"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
base64 = "0.22"
crossbeam-channel = "0.5"
hmac = "0.12"
libc = "0.2"
portable-pty = "0.8"
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
signal-hook = "0.3"

[profile.release]
lto = "thin"
